Meme url width wrap fix

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -74,6 +74,7 @@ main {
 .button-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin: 0px;
 }
 
@@ -86,8 +87,7 @@ main {
   background-color: #FFAC4A;
   color: #2E004B;
   cursor: pointer;
-  margin-bottom: 14px;
-  margin-right: 10px;
+  margin: 0px 14px 10px 0px;
   text-wrap: nowrap;
 }
 
@@ -106,7 +106,8 @@ main {
   border-radius: 20px;
   border: 2px solid #2E004B;
   outline: none;
-  width: 100%;
+  min-width: 50%;
+  max-width: 100%;
   padding: 10px 16px;
   margin-bottom: 13px;
   flex-grow: 1;
